--- a/main.html
+++ b/main.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 	
+	<div class="field">
+		<div class="ryu">
+			<div class="ryu-still"></div>
+			<div class="ryu-ready"></div>
+			<div class="ryu-throwing"></div>
+		</div>
+	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
