--- a/main.html
+++ b/main.html
@@ -13,7 +13,10 @@
 			<div class="ryu-still"></div>
 			<div class="ryu-ready"></div>
 			<div class="ryu-throwing"></div>
+			<div class="ryu-cool"></div>
 		</div>
+		<div class="hadouken"></div>
+		<audio src="sound/hadouken.mp3" id="hadouken-sound"></audio>
 	</div>
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
